Fix uneven spacing in Properties Panel common fields

--- a/src/style.css
+++ b/src/style.css
@@ -532,6 +532,7 @@ body {
     color: var(--color-text-placeholder);
 }
 
+.panel-common-props,
 #prop-appearance {
     display: flex;
     flex-direction: column;
